[package]
name = "http-body-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
http-body = "1.0.0"
http-body-util = "0.1.0"
tokio = { version = "1.36.0", features = ["sync", "io-std", "io-util", "test-util", "tokio-macros", "rt", "macros"] }
