[package]
name = "http-body-io"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
http-body = "1.0.0"
tokio = { version = "1.36.0", features = ["sync", "io-std"] }

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["sync", "io-std", "io-util", "test-util", "tokio-macros", "rt", "macros"] }
http-body-util = "0.1.0"
