[package]
name = "http-body-io"
version = "0.1.1"
edition = "2021"
authors = ["Andrés F. Quintero <afquinteromoreano@gmail.com>"]
description = "A very simple IO wrapper for http-body"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andyquinterom/http-body-io"
repository = "https://github.com/andyquinterom/http-body-io"
keywords = ["http", "body", "io", "async", "tokio"]

[dependencies]
bytes = "1.5.0"
http-body = "1.0.0"
tokio = { version = "1.36.0", features = ["sync", "io-std"] }

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["sync", "io-std", "io-util", "test-util", "tokio-macros", "rt", "macros"] }
http-body-util = "0.1.0"
